# input_actions

./: AGENTS.md  Cargo.toml
actions-keybindings/: Cargo.toml
actions-keybindings/src/: lib.rs  parse.rs
actions-proto/: Cargo.toml
actions-proto/src/: ids.rs  lib.rs  macros.rs  search.rs  when.rs
actions-reaper/: Cargo.toml
actions-registry/src/: lib.rs
actions-standalone/: Cargo.toml
actions-standalone/src/: lib.rs
crates/actions-keybindings/src/: parse.rs
crates/actions-proto/: Cargo.toml
crates/actions-proto/src/: ids.rs  lib.rs  macro_tests.rs  macros.rs  search.rs
crates/actions-reaper/: Cargo.toml
crates/actions-reaper/src/: lib.rs
crates/actions-registry/: Cargo.toml
crates/actions-registry/src/: lib.rs
crates/actions-standalone/: Cargo.toml
crates/actions-standalone/src/: lib.rs
crates/input-dioxus/src/: hook.rs  lib.rs
crates/input-dioxus/src/visualizer/: components.rs  data.rs  layout.rs  mod.rs
crates/input/src/: config.rs  context.rs  key.rs  lib.rs  mouse.rs  processor.rs  scroll.rs
input/: Cargo.toml
input-dioxus/: Cargo.toml
input-dioxus/src/: convert.rs  hook.rs  lib.rs
input/defaults/: keymap.styx
input/src/: command.rs  config.rs  context.rs  event.rs  key.rs  lib.rs  macros.rs  mode.rs  processor.rs  scroll.rs  sequence.rs  trie.rs
