[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FastTrack Studio"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]

[workspace.lints.clippy]

[workspace.dependencies]
# Internal crates
actions-proto = { path = "crates/actions-proto" }
actions-keybindings = { path = "crates/actions-keybindings" }
actions-registry = { path = "crates/actions-registry" }
actions-standalone = { path = "crates/actions-standalone" }
actions-reaper = { path = "crates/actions-reaper" }
input = { path = "crates/input" }
input-dioxus = { path = "crates/input-dioxus" }

# Roam RPC framework (pinned — latest main needs peeps sub-crates not yet published)
roam = { git = "https://github.com/bearcove/roam.git", rev = "30a8e10" }

# Facet reflection
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }

# REAPER bindings (for actions-reaper)
reaper-high = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }

# Dioxus UI framework (for input-dioxus)
dioxus = "0.7.2"

# Common dependencies
tokio = { version = "1.48", features = ["full"] }
tracing = { version = "0.1", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
