[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FastTrack Studio"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]

[workspace.lints.clippy]

[workspace.dependencies]
# Internal crates
actions-proto = { path = "crates/actions-proto" }
actions-keybindings = { path = "crates/actions-keybindings" }
actions-registry = { path = "crates/actions-registry" }
actions-standalone = { path = "crates/actions-standalone" }
actions-reaper = { path = "crates/actions-reaper" }
input = { path = "crates/input" }
input-dioxus = { path = "crates/input-dioxus" }

# Roam RPC framework (pinned — latest main needs peeps sub-crates not yet published)
vox = { git = "https://github.com/bearcove/vox.git", rev = "53bff48" }

# Facet reflection - use crates.io 0.43.x to match vox's constraint
facet = { version = "0.44" }
facet-core = { version = "0.44" }
facet-format = { version = "0.44" }
facet-json = { version = "0.44" }
facet-postcard = { version = "0.44" }
facet-pretty = { version = "0.44" }
facet-value = { version = "0.44" }
facet-yaml = { version = "0.44" }

# REAPER bindings (FTS fork with v7.63 ruler lane APIs)
reaper-high = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }
reaper-medium = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }

# Dioxus UI framework (for input-dioxus)
dioxus = "0.7.2"

# Common dependencies
tokio = { version = "1.48", features = ["full"] }
tracing = { version = "0.1", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
