[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FastTrack Studio"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]

[workspace.lints.clippy]

[workspace.dependencies]
# Internal crates
actions-proto = { path = "crates/actions-proto" }
actions-keybindings = { path = "crates/actions-keybindings" }
actions-registry = { path = "crates/actions-registry" }
actions-standalone = { path = "crates/actions-standalone" }
actions-reaper = { path = "crates/actions-reaper" }
input = { path = "crates/input" }
input-dioxus = { path = "crates/input-dioxus" }

# Roam RPC framework.
vox = { git = "https://github.com/Codys-Wright/vox.git", rev = "17e399d5" }

# Facet reflection - keep aligned with vox's public re-export.
facet = { version = "0.46" }
facet-core = { version = "0.46" }
facet-format = { version = "0.47" }
facet-json = { version = "0.46" }
facet-postcard = { version = "0.46" }
facet-pretty = { version = "0.46" }
facet-value = { version = "0.46" }
facet-yaml = { version = "0.46" }

# REAPER bindings (FTS fork with v7.63 ruler lane APIs)
reaper-high = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }
reaper-medium = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }

# Dioxus UI framework (for input-dioxus)
dioxus = "0.7.2"

# Common dependencies
tokio = { version = "1.48", features = ["full"] }
tracing = { version = "0.1", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
